# charm

./: .gitignore  CMakeLists.txt  CoinCounter.sln  README.md  charm.sln  license.txt  package.xml
CoinCounter/: AStar.cpp  AStar.h  CoinCounter.vcxproj  CoinCounter.vcxproj.filters  Globals.cpp  Globals.h  ImageProcessor.cpp  ImageProcessor.h  Item.cpp  Item.h  MainPlanner.cpp  MainPlanner.h  NewArm.cpp  NewArm.h  Point.cpp  Point.h  PointNode.cpp  PointNode.h  Vec2.h  Writer.cpp  Writer.h  adjustedMainPlanner.h  camera_calibration.yml  main.cpp  mainPlannerAdjusted.cpp  main_bak.cpp  main_last.cpp  main_old.cpp  rowmans.h  stdafx.cpp  writing.h
dynamixel/: dynamixel.cs  dynamixel.def  dynamixel.lib  dynamixel.vb
dynamixel/JNI_dll/: Build.bat  dynamixel_jni.h  dynamixel_jni.java
dynamixel/JNI_dll/Dynamixel_JNI_DLL/: Dynamixel_JNI_DLL.sln  Dynamixel_JNI_DLL.vcproj  dynamixel_jni.cpp
include/charm/arm/: ArmProxy.h
include/charm/planner/: AStar.h  MainPlanner.h
include/charm/shared/: Globals.h  Item.h  Point.h  PointNode.h  Vec2.h
include/charm/vision/: ImageProcessor.h
src/arm/: ArmProxy.cpp
src/dynamixel/: libdxl version.txt
src/planner/: AStar.cpp  MainPlanner.cpp
src/ros/: CharmNode.cpp
src/shared/: Globals.cpp  Item.cpp  Point.cpp  PointNode.cpp
src/vision/: ImageProcessor.cpp
